# lib/api-spec/openapi.yaml
@@ -628,6 +628,8 @@ components:
           type: string
         name:
           type: string
+        brandName:
+          type: ["string", "null"]
         description:
           type: ["string", "null"]
         images:
@@ -647,6 +649,12 @@ components:
           type: string
           enum: [Top, Bottom, "Full Outfit", Functional]
         sizes:
+          type: array
+          items:
+            type: string
+        stock:
+          type: integer
+        colours:
           type: array
           items:
             type: string
@@ -663,6 +671,8 @@ components:
       properties:
         name:
           type: string
+        brandName:
+          type: string
         description:
           type: string
         images:
@@ -682,6 +692,12 @@ components:
           type: string
           enum: [Top, Bottom, "Full Outfit", Functional]
         sizes:
+          type: array
+          items:
+            type: string
+        stock:
+          type: integer
+        colours:
           type: array
           items:
             type: string
@@ -691,6 +707,8 @@ components:
       properties:
         name:
           type: string
+        brandName:
+          type: string
         description:
           type: string
         images:
@@ -710,6 +728,12 @@ components:
           type: string
           enum: [Top, Bottom, "Full Outfit", Functional]
         sizes:
+          type: array
+          items:
+            type: string
+        stock:
+          type: integer
+        colours:
           type: array
           items:
             type: string
